<resources>
    <string name="app_name">Bracketed</string>
    <string name="Member_Directory">Member Directory</string>
    <string name="username">Name</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="branch">Branch</string>
    <string name="title">Title</string>
    <string name="instname">Institution Name</string>
    <string name="edudetails">Education Details</string>
    <string name="cmpdetails">Work Experience</string>
    <string name="cmpname">Organisation Name</string>
    <string name="joindate">Join Date</string>
    <string name="position">Position</string>
    <string name="board">Board</string>
    <string name="result">Result %</string>
    <string name="degree">Degree</string>
    <string name="admindetail">Admin Details</string>
    <string name="location">Location</string>
    <string name="ip">IP Address</string>
    <string name="lastedit">Last Edit</string>
    <string name="desc">Description</string>
    <string name="domain">Domain</string>
    <string name="summary">Summary</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="add">Add</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Noaccount">Not have an account ? Click Here</string>
    <string name="cpr">CopyRight@Rithik_Sachdev</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sgsits Directory</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="save">Save</string>
    <string name="mail">Email Address</string>
    <string name="contactno">Contact Number</string>
    <string name="dob">Date of Birth</string>
    <string name="roll">Roll No</string>
    <string name="pin">Pincode</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="aboutme">This is a Member Directory Created by Rithik Sachdev for the Members of SGSITS, Indore</string>
    <string name="menu_search">Search</string>
    <string name="menu_pdf">Word to Pdf Generator</string>
    <string name="menu_settings">Settings</string>
    <string name="changepass">Change Password</string>
    <string name="menu_about">About Us</string>
    <string name="prevpass">Previous Password</string>
    <string name="newpass">New Password</string>
    <string name="confirmnew">Confirm New Password</string>
    <string name="menu_notf">Notifications</string>
    <string name="menu_share">Share</string>
    <string name="menu_editprofile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
