<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_editprofile"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_editprofile" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/notif"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            android:title="@string/menu_notf" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/menu_about"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>