<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="374dp"
        app:lottie_fileName="newpass.json"
        android:id="@+id/newpasswordanime"
        />

    <TextView
        android:id="@+id/textchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/changepass"
        android:textSize="35sp"
        android:gravity="center"
        android:fontFamily="@font/alegreya_sans_sc_bold"

        />
    <EditText
        android:id="@+id/prevpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:background="@drawable/txt"
        android:inputType="textPassword"
        android:hint="@string/prevpass"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        />


    <EditText
        android:id="@+id/newpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxmargin"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:background="@drawable/txt"
        android:hint="@string/newpass"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/confirmpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/xxmargin"
        android:layout_gravity="center"
        android:background="@drawable/txt"
        android:hint="@string/confirmnew"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/savechng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn"
        android:text="@string/save"
        android:textSize="23sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/alegreya_sans_sc_bold"/>

</LinearLayout>