<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"

    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text1"
            android:layout_width="403dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="200dp"
            android:layout_alignBottom="@+id/imageView"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/Member_Directory"
            android:textColor="#000000"
            android:textColorHighlight="#00000000"
            android:textColorLink="#00E01A1A"
            android:textIsSelectable="false"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="500dp"
            android:layout_height="466dp"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="0dp"
            android:paddingBottom="30dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:padding="0dp"
            android:paddingEnd="0dp"
            android:paddingHorizontal="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
            android:paddingVertical="0dp"
            app:srcCompat="@drawable/b1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="103dp"
            android:layout_height="104dp"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="160dp"
            android:layout_marginRight="165dp"
            android:contentDescription="GSITS Logo"
            android:verticalScrollbarPosition="defaultPosition"
            app:srcCompat="@drawable/gs"
            tools:srcCompat="@drawable/gs" />



        <EditText
            android:id="@+id/userName"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="390dp"
            android:background="@drawable/user"
            android:hint="@string/username"
            android:height="41dp"
            android:width="261dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="70dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="37dp"
            android:layout_height="41dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="390dp"
            android:minHeight="20dp"
            app:srcCompat="@drawable/ic_person_black_24dp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="460dp"
            android:background="@drawable/user"
            android:hint="@string/Password"
            android:height="41dp"
            android:width="261dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="70dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="465dp"
            android:minHeight="20dp"
            app:srcCompat="@drawable/ic_lock_outline_black_24dp" />


        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginStart="153dp"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="530dp"
            android:layout_marginEnd="153dp"
            android:layout_marginRight="153dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/lgnbtn"
            android:text="@string/Login"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="314dp"
            android:layout_height="34dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="600dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:onClick="performregisteration"
            android:text="@string/Noaccount"
            android:textColor="#000000"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>